KULRICE-4281 - applied fix from OJB-93 to our ojb 1.0.4 patch version
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/ojb-1.0.4/trunk@6941 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/build.properties
+++ b/build.properties
@@ -206,7 +206,7 @@ name=ObJectRelationalBridge
 project-name=db-ojb
 major=1
 minor=0
-build=4_01-patch
+build=4-patch4
 version=${major}.${minor}.${build}
 versiondate=2005-12-30
 ojb-filename-prefix=${project-name}-${version}
