Add kuali.site.download.path property
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/ojb-1.0.4/trunk@6961 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/pom.xml
+++ b/pom.xml
@@ -38,6 +38,7 @@
     <kuali.repository.release.name>Kuali External Repository</kuali.repository.release.name>
     <kuali.repository.release.url>s3://maven.kuali.org/external</kuali.repository.release.url>
     <kuali.site.download.prefix>external</kuali.site.download.prefix>
+    <kuali.site.download.path>ojb</kuali.site.download.path>
     <kuali.clover.generate.info.phase>none</kuali.clover.generate.info.phase>
     <kuali.clover.exclude.pattern.1>**/*.java</kuali.clover.exclude.pattern.1>
     <kuali.compile.target>1.5</kuali.compile.target>
