--- a/pom.xml
+++ b/pom.xml
@@ -47,43 +47,48 @@
     <maven.test.skip>true</maven.test.skip>
   </properties>
   <dependencies>
+
     <!-- 
     <dependency>
-      <id>ejb</id>
-      <version>1.0</version>
-      <jar>ejb.jar</jar>
-      <url>http://java.sun.com/j2ee/</url>
-    </dependency>
-    <dependency>
-      <id>jdo</id>
+      <groupId>jdo</groupId>
+      <artifactId>jdo</artifactId>
       <version>1.0.1</version>
-      <url>http://java.sun.com/products/jdo/</url>
     </dependency>
     <dependency>
       <groupId>jdo</groupId>
       <artifactId>jdori</artifactId>
       <version>1.0.1</version>
-      <url>http://java.sun.com/products/jdo/</url>
     </dependency>
     <dependency>
-      <id>jcs</id>
+      <groupId>jcs</groupId>
+      <artifactId>jcs</artifactId>
       <version>1.0-dev</version>
-    </dependency>
-    <dependency>
-      <id>J2EE</id>
-      <version>2.x</version>
-      <url>http://java.sun.com/products/j2ee/</url>
+      <optional>true</optional>
     </dependency>
      -->
+
+
     <dependency>
       <groupId>ant</groupId>
       <artifactId>ant</artifactId>
-      <version>1.6</version>
+      <version>1.6.5</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>antlr</groupId>
       <artifactId>antlr</artifactId>
-      <version>2.7.2</version>
+      <version>2.7.5</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>asm</groupId>
+      <artifactId>asm</artifactId>
+      <version>1.5.3</version>
+    </dependency>
+    <dependency>
+      <groupId>cglib</groupId>
+      <artifactId>cglib</artifactId>
+      <version>2.1</version>
     </dependency>
     <dependency>
       <groupId>commons-beanutils</groupId>
@@ -93,7 +98,7 @@
     <dependency>
       <groupId>commons-collections</groupId>
       <artifactId>commons-collections</artifactId>
-      <version>2.1.1</version>
+      <version>3.1</version>
     </dependency>
     <dependency>
       <groupId>commons-dbcp</groupId>
@@ -103,7 +108,7 @@
     <dependency>
       <groupId>commons-lang</groupId>
       <artifactId>commons-lang</artifactId>
-      <version>2.0</version>
+      <version>2.1</version>
     </dependency>
     <dependency>
       <groupId>commons-logging</groupId>
@@ -114,47 +119,84 @@
       <groupId>commons-pool</groupId>
       <artifactId>commons-pool</artifactId>
       <version>1.2</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>commons-transaction</groupId>
+      <artifactId>commons-transaction</artifactId>
+      <version>1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>geronimo-spec</groupId>
+      <artifactId>geronimo-spec-j2ee</artifactId>
+      <version>1.4-rc4</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>geronimo-spec</groupId>
+      <artifactId>geronimo-spec-jta</artifactId>
+      <version>1.0.1B-rc4</version>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>geronimo-spec</groupId>
+      <artifactId>geronimo-spec-servlet</artifactId>
+      <version>2.4-rc4</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>hsqldb</groupId>
       <artifactId>hsqldb</artifactId>
-      <version>1.7.1</version>
+      <version>1.8.0.1</version>
     </dependency>
     <dependency>
       <groupId>regexp</groupId>
       <artifactId>regexp</artifactId>
       <version>1.3</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
+      <scope>test</scope>
     </dependency>
     <dependency>
       <groupId>log4j</groupId>
       <artifactId>log4j</artifactId>
       <version>1.2.8</version>
+      <optional>true</optional>
+      <scope>runtime</scope>
     </dependency>
     <dependency>
       <groupId>p6spy</groupId>
       <artifactId>p6spy</artifactId>
-      <!-- <version>1.0</version>  -->
-      <version>1.1</version>
-    </dependency>
-    <dependency>
-      <groupId>javax.servlet</groupId>
-      <artifactId>servlet-api</artifactId>
-      <version>2.2</version>
+      <version>1.3</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>torque</groupId>
       <artifactId>torque</artifactId>
-      <version>3.0.2</version>
+      <version>3.1.1</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>velocity</groupId>
       <artifactId>velocity</artifactId>
       <version>1.3.1</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>xdoclet</groupId>
+      <artifactId>xdoclet</artifactId>
+      <version>1.2.3</version>
+      <optional>true</optional>
+    </dependency>
+    <dependency>
+      <groupId>xjavadoc</groupId>
+      <artifactId>xjavadoc</artifactId>
+      <version>1.1</version>
+      <optional>true</optional>
     </dependency>
     <dependency>
       <groupId>xalan</groupId>
@@ -164,12 +206,12 @@
     <dependency>
       <groupId>xerces</groupId>
       <artifactId>xercesImpl</artifactId>
-      <version>2.0.2</version>
+      <version>2.7.1</version>
     </dependency>
     <dependency>
       <groupId>xml-apis</groupId>
       <artifactId>xml-apis</artifactId>
-      <version>1.0.b2</version>
+      <version>1.3.02</version>
     </dependency>
   </dependencies>
   <build>
