Change groupId to org.kuali.ojb.  Attempting to publish this artifact using a groupId of "ojb" would prevent it from being sync'd into Maven Central
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/ojb-1.0.4/trunk@6973 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>kuali</artifactId>
     <version>72</version>
   </parent>
-  <groupId>ojb</groupId>
+  <groupId>org.kuali.ojb</groupId>
   <artifactId>db-ojb</artifactId>
   <version>1.0.4-patch6-SNAPSHOT</version>
   <name>ObJectRelationalBridge</name>
