Set kuali.site.plugin.version to 2.0.1 so the site plugin doesn't force use of Maven3 to build
git-svn-id: https://svn.kuali.org/repos/foundation/legacy/ojb-1.0.4/trunk@6977 eb505253-de9c-4f3b-bf87-3aad84f29c0f

--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,8 @@
     <url>https://test.kuali.org/svn/kul-ojb-1.0.4/trunk</url>
   </scm>
   <properties>
+    <!-- Remove this property as soon as the devs are comfortable with Maven 3 -->
+    <kuali.site.plugin.version>2.0.1</kuali.site.plugin.version>
     <kuali.release.goals>clean</kuali.release.goals>
     <kuali.site.download.path>org/kuali/ojb</kuali.site.download.path>
     <kuali.clover.generate.info.phase>none</kuali.clover.generate.info.phase>
